@@ -14,6 +14,12 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
+== {compare-url}/v0.1.1\...HEAD[Unreleased]
+
+=== Changed
+
+* Change the buffer capacity ({pull-request-url}/14[#14])
+
 == {compare-url}/v0.1.0\...v0.1.1[0.1.1] - 2025-03-11
 
 === Added
